<?xml version="1.0"?>
<package>
  <name>pcl_catkin_191</name>
  <version>1.9.1</version>
  <description>PCL 1.9.1 in a catkin package</description>
  <maintainer email="dbworth@gmail.com">David Butterworth</maintainer>
  <author>David Butterworth</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>

</package>
