<?xml version="1.0"?>
<package format="2">
  <name>test_pcl</name>
  <version>1.9.1</version>
  <description>Test installation of PCL (PointCloud Library)</description>

  <maintainer email="dbworth@gmail.com">David Butterworth</maintainer>
  <author>David Butterworth</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <!-- depend>pcl_ros</depend -->
  <depend>pcl_catkin_191</depend>

</package>
